--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,10 @@ environment:
 dependencies: 
   cupertino_icons: ^1.0.2
   get: 4.6.5
+  sqflite: 2.2.8+4
+  image_picker: ^1.0.2
+  path_provider:
+  path:
   flutter: 
     sdk: flutter
 
